Fixed the z-indexes to not be hidden behind the parallax images

--- a/src/features/quickSearch/QuickSearch.scss
+++ b/src/features/quickSearch/QuickSearch.scss
@@ -39,7 +39,7 @@
     .suggestions,
     .no-suggestions,
     .dropdown-menu {
-      z-index: 3;
+      z-index: 4;
       position: absolute;
       top: 12px;
       width: 100%;
